[gd_scene load_steps=26 format=3 uid="uid://b808k05i4ho5x"]

[ext_resource type="PackedScene" uid="uid://dujf08enq3ely" path="res://World/base_scene.tscn" id="1_nlq40"]
[ext_resource type="Texture2D" uid="uid://bm0ms13rnosu4" path="res://Asset/Background/bg hutan.png" id="2_5frsf"]
[ext_resource type="Script" path="res://World/Story 2/pinggir_s_2_scene_5.gd" id="2_s4cs8"]
[ext_resource type="Resource" uid="uid://dixg80nhejfrc" path="res://NPC/DialogueSystem/Dialogues/Story_2/S2_Monologue_Kumbakarna.dialogue" id="3_pgh33"]
[ext_resource type="PackedScene" uid="uid://6w05qyqoeghq" path="res://World/Base_World/Objects/beringin.tscn" id="3_vp3lu"]
[ext_resource type="Shader" path="res://Asset/Shaders/blur.gdshader" id="5_ex6wl"]
[ext_resource type="Texture2D" uid="uid://bwc2s132kqq4h" path="res://Asset/Object/makam.png" id="6_mijec"]
[ext_resource type="Texture2D" uid="uid://dhp1jcfl50j4f" path="res://Asset/Sprite/Rahwana/Rahwana0000.png" id="7_2ercy"]
[ext_resource type="PackedScene" uid="uid://d2wtn56o8bkip" path="res://Audio Manager/audio_pool.tscn" id="7_56i8k"]
[ext_resource type="PackedScene" uid="uid://bi0846o1rirjc" path="res://Audio Manager/audio_queue.tscn" id="8_8t4yx"]
[ext_resource type="Texture2D" uid="uid://dy0j1tysoelcr" path="res://Asset/Sprite/Rahwana/Rahwana0001.png" id="8_yekob"]
[ext_resource type="Texture2D" uid="uid://td06xrwrhxea" path="res://Asset/Sprite/Rahwana/Rahwana0002.png" id="9_1bosl"]
[ext_resource type="AudioStream" uid="uid://6m1lyh4dcg16" path="res://Asset/Sound/Lose & Win SFX/Victory.mp3" id="9_448eu"]
[ext_resource type="FontFile" uid="uid://c0j8uxro2gu5u" path="res://Asset/Font/dum3.ttf" id="9_qca5t"]
[ext_resource type="Texture2D" uid="uid://fjl1rpw116vc" path="res://Asset/Sprite/Rahwana/Rahwana0003.png" id="10_i23uj"]
[ext_resource type="AudioStream" uid="uid://diww1kbf74o6k" path="res://Asset/Sound/Lose & Win SFX/Lose.mp3" id="10_su7lh"]
[ext_resource type="Texture2D" uid="uid://d2kyw10b3s8j6" path="res://Asset/Sprite/Rahwana/Rahwana0004.png" id="11_c4165"]
[ext_resource type="Texture2D" uid="uid://cal3jt68781ta" path="res://Asset/Sprite/Rahwana/Rahwana0005.png" id="12_a73tj"]
[ext_resource type="Texture2D" uid="uid://dwamiukxexggx" path="res://Asset/Sprite/Rahwana/Rahwana0006.png" id="13_78c2o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_um4jy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_2ercy")
}, {
"duration": 1.0,
"texture": ExtResource("8_yekob")
}, {
"duration": 1.0,
"texture": ExtResource("9_1bosl")
}, {
"duration": 1.0,
"texture": ExtResource("10_i23uj")
}, {
"duration": 1.0,
"texture": ExtResource("11_c4165")
}, {
"duration": 1.0,
"texture": ExtResource("12_a73tj")
}, {
"duration": 1.0,
"texture": ExtResource("13_78c2o")
}],
"loop": true,
"name": &"Rahwana_idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_y76ux"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overlay/Blur:material:shader_parameter/amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Overlay/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Player:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c8oet"]
resource_name = "end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay/Blur:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Overlay/Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_sfx"
}]
}

[sub_resource type="Animation" id="Animation_f6qsu"]
resource_name = "start_monologue"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_intro"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ps7a"]
_data = {
"RESET": SubResource("Animation_y76ux"),
"end": SubResource("Animation_c8oet"),
"start_monologue": SubResource("Animation_f6qsu")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3sk3e"]
shader = ExtResource("5_ex6wl")
shader_parameter/amount = 0.0

[node name="Pinggir_S2_Scene5" instance=ExtResource("1_nlq40")]
script = ExtResource("2_s4cs8")
dialogue_resource = ExtResource("3_pgh33")

[node name="Background" parent="." index="0"]
self_modulate = Color(0.803922, 0.803922, 0.803922, 1)
position = Vector2(968, 376)
scale = Vector2(0.34, 0.34)
texture = ExtResource("2_5frsf")

[node name="Beringin" parent="." index="2" instance=ExtResource("3_vp3lu")]
position = Vector2(1016, 328)
scale = Vector2(0.2, 0.2)

[node name="Makam" type="Sprite2D" parent="." index="3"]
position = Vector2(1016, 664)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_mijec")

[node name="Rahwana" type="AnimatedSprite2D" parent="." index="4"]
position = Vector2(840, 632)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_um4jy")
animation = &"Rahwana_idle"
autoplay = "Rahwana_idle"

[node name="Player" parent="." index="5"]
visible = false
position = Vector2(848, 664)

[node name="CutScene" type="AnimationPlayer" parent="." index="10"]
libraries = {
"": SubResource("AnimationLibrary_2ps7a")
}

[node name="Overlay" type="CanvasLayer" parent="." index="11"]

[node name="ColorRect" type="ColorRect" parent="Overlay" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="Blur" type="ColorRect" parent="Overlay" index="1"]
material = SubResource("ShaderMaterial_3sk3e")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Overlay" index="2"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("9_qca5t")
theme_override_font_sizes/font_size = 50
text = "END SCENE"

[node name="AudioPool" parent="." index="12" instance=ExtResource("7_56i8k")]

[node name="Win" parent="AudioPool" index="0" instance=ExtResource("8_8t4yx")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioPool/Win" index="0"]
stream = ExtResource("9_448eu")
bus = &"SFX"

[node name="Lose" parent="AudioPool" index="1" instance=ExtResource("8_8t4yx")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioPool/Lose" index="0"]
stream = ExtResource("10_su7lh")
bus = &"SFX"

[connection signal="animation_finished" from="CutScene" to="." method="_on_cut_scene_animation_finished"]
